--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,10 @@
     <artifactId>springai</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>springai-ws</name>
-    <description>springai-ws</description>
+    <modules>
+        <module>springai-ollama-ws</module>
+        <module>springai-openai-ws</module>
+    </modules>
     <url/>
     <licenses>
         <license/>
@@ -35,6 +37,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -46,6 +52,7 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
